# mcp-bridge

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  docker-compose-dind-full-stack.yml  docker-compose-dind-mac.yml  docker-compose-dind.yml  docker-compose-dod-mac.yml  docker-compose-dod.yml  docker-compose-full-stack.yml  docker-compose-gw-dind-mac.yml  docker-compose-gw-dind.yml  docker-compose-gw.yml  docker-compose-mac.yml  docker-compose-with-bias.yml  docker-compose.yml  main.py  old_docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  mcp_use_api_wrapper.py  mcp_wrapper.py  old_mcp_use_api_wrapper.py  old_mcp_wrapper.py
app/api/: __init__.py  dependencies.py  error_mapping.py  errors.py  mcp_capabilities.py  multipart_form.py  session_context.py
app/core/: __init__.py  a2a_client.py  bias_detector_client.py  config.py  exceptions.py  guardrail_runner.py  mcp_audit.py  mcp_policy_engine.py  mcp_task_runtime.py  mcp_wrapper.py  mcp_wrapper_errors.py  (+13 more)
demos/: mcp-bridge-rest-demo.cast
docs/: ARCHITECTURE_FLOW.md  CHAT_WORKFLOW.md  DECISIONS.md  GITHUB_REPO_SETTINGS.md  MULTIMODAL_V2_ROADMAP.md  NEW_CHAT_PROMPT.md  PROJECT_CONTEXT.md  ROADMAP.md  SNIPPETS.md
examples/: README.md
tests/: conftest.py  test_a2a_contract.py  test_a2a_messages_t1.py  test_bias_detector_client_unsafe_labels_payload.py  test_bias_detector_rules.py  test_guardrails_bias_cascade_checks.py  test_guardrails_bias_flagged_label_scores.py  test_guardrails_bias_proxy_routes_accept_slashes.py  test_guardrails_bias_unsafe_labels_forwarding.py  test_guardrails_http_contract.py  test_guardrails_pipeline.py  test_guardrails_session_config.py  test_guardrails_tool_result_redaction_http_contract.py  test_main_a2a_opt_in.py  test_mcp_http_transport_regression.py  test_mcp_policy_engine_refactor.py  test_mcp_prompts_resources_http_contract.py  test_mcp_wrapper_task_interaction_regression.py  test_multimodal_image_url_fetch.py  test_multimodal_query_support.py  test_multipart_query_http_contract.py  test_output_sanitization.py  test_pii_mode_resolution.py  test_public_safe_defaults.py  test_session_cleanup.py  test_tool_policy_http_contract_minimal.py
(+57 files in other folders)
