[project]
name = "mcp-bridge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0.0",
    "black>=23.0.0",
    "fastapi>=0.116.0",
    "flake8>=6.0.0",
    "httpx>=0.25.0",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0",
    "mcp-use",
    "mypy>=1.7.0",
    "psutil>=5.9.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.25.0",
    "websockets>=12.0",
]

[tool.uv.sources]
mcp-use = { git = "https://github.com/mcp-use/mcp-use.git", rev = "main" }
